# nemocode

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  start-nemo.sh
src/: main.rs  python_project.rs  python_tools.rs
src/lsp/: mod.rs
